--- a/specs.yaml
+++ b/specs.yaml
@@ -23,9 +23,10 @@ paths:
         ### Service allocation.
         Use this endpoint to allocate a service to a shipment.
         The endpoint supports two scenarios:
-        - Allocate a shipment to specific carrier and service, the same way
+        1) Allocate a shipment to specific carrier and service, the same way
           as you allocate manually in the Scurri UI.
-        - Allocate using rules.
+
+        2) Allocate using rules.
 
         #### Manual allocation
         To do the manual allocation, you have to specify `carrier` and
