--- a/specs.yaml
+++ b/specs.yaml
@@ -89,6 +89,9 @@ definitions:
         type: string
         description: Incoterms rule, also known as customs invoice type in
           our V1 API.
+    required:
+      - carrier
+      - service
     type: object
     example:
       carrier: Generic Carrier
