--- a/specs.yaml
+++ b/specs.yaml
@@ -47,6 +47,7 @@ paths:
           type: string
           required: true
           description: Slug of your company
+          default: api-test-company
         - in: path
           name: identifier
           type: string
