--- a/specs.yaml
+++ b/specs.yaml
@@ -71,6 +71,8 @@ paths:
           description: error
           schema:
             $ref: '#/definitions/Error'
+      security:
+        - {basic: []}
 definitions:
   ServiceAllocation:
     properties:
