--- a/specs.yaml
+++ b/specs.yaml
@@ -20,8 +20,8 @@ paths:
   '/company/{company_slug}/shipments/{identifier}/allocate':
     post:
       tags:
-        - shipment
-        - allocation
+        - Shipment
+        - Allocation
       description: |
         ### Service allocation.
         Use this endpoint to allocate a service to a shipment.
